assignment3/nginx-dep.yaml
# Writter: Hiu Sum Yuen
# Version: 1.0

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-dep
spec:
  replicas: 5
  selector:
    matchLabels:
      name: nginx
      version: "1.14.2"
  template:
    metadata:
      labels:
        name: nginx
        version: "1.14.2"
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - name: http
              containerPort: 8080
