assignment3/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80  # This is the port exposed by the Service itself. When other applications or services want to communicate with the Service, they will use this port.
    targetPort: 80  #  This is the port on the Pods selected by the Service where the traffic will be sent
